# fan-based-item-tracking-app

./: README.md  pyproject.toml  render.yaml  requirements.txt
client/: package.json
client/src/: index.css
client/src/components/: App.js  Home.js  Items.js  LocationItems.js  Locations.js  Navbar.js
server/: app.py  config.py  models.py  pip install -r requirements.txt && npm i.yml  seed.py
server/migrations/versions/: 1121f52f9289_initial_migration.py  1271a67f9cf4_initial_migration.py  2ce7963ecfc0_initial_migration.py  efe37a682d45_initial_migration.py
