[tool.poetry]
name = "fan-based-item-tracking-app"
version = "0.1.0"
description = ""
authors = ["Muhammed khan qcc2016@yahoo.com"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.0"
flask-cors = "^3.0"
flask-migrate = "^3.0"
flask-sqlalchemy = "^2.5"
python-dotenv = "^0.19"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
